<resources>
    <string name="app_name">Lab 02</string>
    <string name="student_info">Hang Liu, A01173804</string>
    <string name="change_color">Change Color</string>
    <string name="speak">Speak</string>
    <string name="api_version">API Version</string>
    <string name="hint">Type some text</string>
    <string name="serial_number">Serial Number</string>
    <string name="back">Back</string>
    <string name="remainder">Please type some text first.</string>
</resources>